# Zygisk-StopApp

./: CMakeLists.txt  README.md  main.cpp  settings.gradle.kts
.github/workflows/: android.yml  main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  hook.cpp  main.cpp  utils.cpp  zygisk.cpp
app/src/main/java/es/thoitiet/KTAify/: EntryPoint.java
module/: blacklist.json  customize.sh  module.prop  sepolicy.rule  service.sh
